# Bank_app_prj

./: pyproject.toml  readme.md
src/: masks.py  processing.py  widget.py
tests/: test_masks.py  test_widget.py
